features/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deluge
    storage: media-stack
    security: lscr
  name: deluge
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - image: lscr.io/linuxserver/deluge:2.2.0@sha256:294787e17a84243f5def09a7bfbf493f8ff484a6ed4c2a8260eb0ff4509fffd0
        name: deluge
        ports:
        - name: http
          containerPort: 8112
        - containerPort: 6881
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: configdir
          mountPath: /config
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: deluge-config-pvc
